<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Empathic Lighting</string>
    <string name="action_settings">Settings</string>
    <string name="no_bridge">No Bridge Found. Start Bridge Search</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_find_bridge">Find new bridge</string>
    <string name="btn_random">Random Lights</string>
    <string name="btn_red">Go Red!</string>
    <string name="btn_blue">Go Blue!</string>
    <string name="btn_green">Go Green!</string>
    <string name="txt_sliders">Adjust the sliders below to change the light settings.</string>
    <string name="txt_sat">Saturation</string>
    <string name="txt_hue">Hue</string>
    <string name="txt_bri">Brightness</string>
    <string name="btn_change">Now Change!</string>
    <string name="search_progress">Searching ...</string>
    <string name="connecting">Connecting ...</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_pnm">Go to Pick n Mix</string>
    <string name="btn_e4">Connect to the E4</string>
    <string name="txt_could_not_connect">No connection</string>
    <string name="txt_click_random_button">The following button uses the connected lamps and sets them to random colours.</string>
    <string name="txt_click_main_colours_button">Click the buttons below to set the lights to one basic colour.</string>
    <string name="could_not_find_bridge">Hue cannot find your bridge. Please check that it is connected to the same Wi-Fi router as your app and press</string>
    <string name="btn_more">More</string>
    <string name="btn_reconnect">Reconnect</string>
    <string name="enter_light_name">Enter light name</string>
    <string name="txt_sdk_version">SDK Version</string>
    <string name="menu_find_bridge">Find new Bridge</string>
    <string name="menu_refresh">Refresh</string>
    <string name="btn_retry">Retry</string>
    <string name="searching_for_bridges">Searching for Bridges</string>
    <string name="txt_selectbridges">Available Access Points</string>
    <string name="txt_pushlink">Pushlink</string>
    <string name="press_pushlink_button">Press the link button on the bridge</string>
    <string name="txt_select_smartbridge">Please select a bridge to use for this app</string>
    <string name="title_error">Error</string>
    <string name="txt_last_heartbeat">Last Heartbeat : </string>
    <string name="title_activity_pick_mood">Pick-A-Mood</string>

    <string name="user_input">Select colour scheme</string>
    <string name="user_input_concentration">Concentration</string>
    <string name="user_input_cozy">Cozy</string>
    <string name="user_input_neutral">Neutral</string>

    <string name="btn_show_pick">Show Pick-A-Mood</string>
    <string name="btn_hide_pick">Hide Pick-A-Mood</string>
    <string name="btn_manual_peak">Add manual GSR peak</string>
    <string name="txt_press_e4">Press connect to the E4</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
