<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PHMyApplicationActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_click_random_button"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonRand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/btn_random" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonRand"
        android:layout_marginTop="21dp"
        android:text="@string/txt_click_main_colours_button"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_green"
        android:layout_alignBaseline="@+id/buttonBlue"
        android:layout_alignBottom="@+id/buttonBlue"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="6dp"
        android:layout_marginEnd="6dp" />

    <Button
        android:id="@+id/buttonBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonRed"
        android:layout_alignBottom="@+id/buttonRed"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_blue" />

    <Button
        android:id="@+id/buttonRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="18dp"
        android:text="@string/btn_red" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonBlue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/txt_sliders" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="21dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textHue"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_hue"
                    android:textAlignment="viewStart" />

                <SeekBar
                    android:id="@+id/seekBarHue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="21dp"
                    android:layout_weight="1"
                    android:max="@integer/hue_max" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textSat"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_sat"
                    android:textAlignment="viewStart" />

                <SeekBar
                    android:id="@+id/seekBarSat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="21dp"
                    android:layout_weight="1"
                    android:max="@integer/sat_max" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textBri"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/txt_bri"
                    android:textAlignment="viewStart" />

                <SeekBar
                    android:id="@+id/seekBarBri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="21dp"
                    android:max="@integer/bri_max" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_change" />
        </LinearLayout>

    </GridLayout>

</RelativeLayout>